upgrading java version to 21