@@ -6,6 +6,7 @@ import wow.scraper.fetcher.PageFetcher;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.stream.Collectors;
 
@@ -20,7 +21,7 @@ public class WebPageFetcher implements PageFetcher {
 	@SneakyThrows
 	@Override
 	public String fetchPage(String urlStr) {
-		URL url = new URL(urlStr);
+		URL url = URI.create(urlStr).toURL();
 		try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(url.openStream(), UTF_8))) {
 			return bufferedReader
 					.lines()
